--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Offer Project</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="banner-container">
@@ -44,7 +45,7 @@
                      <span>Date:</span> 31 December Night 2023 <br>
                      <span>Time:</span> Evening 7.30 pm to 12.30 am
                     </p>
-                     <button>Join Now</button>
+                     <button><span id="join-color">Join Now</span></button>
                 </div>
            </section>
            <!-- comingsoon section -->
@@ -83,9 +84,80 @@
                      <img src="images/discount.png" alt="">
                 </div>
             </section>
+            <!-- portfolio section  -->
+            <section class="portfolio-container">
+                 <div class="portfolio-text-content">
+                     <h5>THE BEST GIFTS</h5>
+                     <h2>Our Awesome Portfolio</h2>
+                     <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod.  </p>
+                 </div>
+                 <div class="portfolio-items">
+                    <div class="item">
+                       <img src="images/image1.png" alt="">
+                    </div>
+                    <div class="item">
+                       <img src="images/image2.png" alt="">
+                    </div>
+                    <div class="item">
+                       <img src="images/image3.png" alt="">
+                    </div>
+                    <div class="item">
+                       <img src="images/image4.png" alt="">
+                    </div>
+                    <div class="item">
+                       <img src="images/image5.png" alt="">
+                    </div>
+                    <div class="item">
+                       <img src="images/image6.png" alt="">
+                    </div>
+                 </div>
+            </section>
+            <!-- subscribe section  -->
+             <section class="subscribe-section-container">
+                 <div class="subscribe-section-content">
+                     <img src="images/mail.png" alt="">
+                     <h2>Subscribe Newsletter</h2>
+                     <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                     <div class="btn-part">
+                        <div class="sub-btn">
+                           <input class="email-part" type="email" name="" id="" placeholder="user@gmail.com">
+                        </div>
+                        <div>
+                           <button class="sub-btn-part"><span id="subs-text">Subscribe</span></button>
+                        </div>
+                     </div>
+                 </div>
+             </section>
     </main>
-    <footer>
-
+    <footer class="footer-container">
+         <div class="footer-first-section">
+            <div>
+               <p>44, Big Building Roosevelt Street <br>
+                  Beach Gardens Florida 33410</p>
+            </div>
+            <div>
+               <span class="contact">
+                  <i class="fa-solid fa-phone phone"></i>
+                  <p>+00 123 584 124</p>
+               </span>
+               <span class="contact">
+                  <i class="fa-brands fa-chrome phone"></i>
+                  <p>www.website.com</p>
+               </span>
+            </div>
+         </div>
+         <hr class="hr">
+         <div class="social-icons">
+            <img src="icons/facebook.png" alt="">
+            <img src="icons/instagram.png" alt="">
+            <img src="icons/twitter.png" alt="">
+            <img src="icons/linkedin.png" alt="">
+         </div>
+         <hr class="hr">
+         <div class="footer-end-text">
+            <p>2017, All Rights Reserved.</p>
+            <p>Unsubscribe</p>
+         </div>
     </footer>
 </body>
 </html>
