image issue fix

--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
          </div>
          <hr class="hr">
          <div class="social-icons">
-            <img src="icons/facebook.png" alt="">
-            <img src="icons/instagram.png" alt="">
-            <img src="icons/twitter.png" alt="">
-            <img src="icons/linkedin.png" alt="">
+            <img src="images/facebook.png" alt="">
+            <img src="images/instagram.png" alt="">
+            <img src="images/twitter.png" alt="">
+            <img src="images/linkedin.png" alt="">
          </div>
          <hr class="hr">
          <div class="footer-end-text">
